perf: add route
