# demo/docs/swagger.yaml
@@ -44,6 +44,12 @@ definitions:
         description: 交易时间
         type: string
     type: object
+  rest.AddProjectResp:
+    properties:
+      project_id:
+        description: 新建成功之后的项目id
+        type: integer
+    type: object
   rest.AssociateInfoI:
     properties:
       account:
@@ -179,6 +185,47 @@ definitions:
         type: integer
       transfer_out_times:
         description: 向同名账户转出次数
+        type: integer
+    type: object
+  rest.ProjectListI:
+    properties:
+      create_time:
+        description: 项目创建时间
+        type: integer
+      doc_count:
+        description: 当前项目下文件总数
+        type: integer
+      name:
+        description: 项目名称
+        type: string
+      note:
+        description: 项目备注
+        type: string
+      project_id:
+        description: 项目id
+        type: integer
+      type:
+        description: 项目类型
+        type: integer
+    type: object
+  rest.ProjectListResp:
+    properties:
+      amount_count:
+        description: 金额总数
+        type: integer
+      count:
+        description: 项目总数
+        type: integer
+      doc_count:
+        description: 文档总数
+        type: integer
+      project_list:
+        description: 项目详情
+        items:
+          $ref: '#/definitions/rest.ProjectListI'
+        type: array
+      report_count:
+        description: 报告总数
         type: integer
     type: object
   rest.Result1:
@@ -375,4 +422,132 @@ paths:
                 data:
                   $ref: '#/definitions/rest.LsyzSummaryResp'
               type: object
+  /edapi/bankbills/project/add:
+    get:
+      description: 项目管理-新建项目
+      parameters:
+      - description: 项目名称
+        in: query
+        name: name
+        required: true
+        type: string
+      - description: 项目备注
+        in: query
+        name: note
+        type: string
+      - description: 用户token
+        in: query
+        name: token
+        required: true
+        type: string
+      - description: 项目类型 1:企业 2:个人 3:其他
+        enum:
+        - 1
+        - 2
+        - 3
+        in: query
+        name: type
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.Result1'
+            - properties:
+                data:
+                  $ref: '#/definitions/rest.AddProjectResp'
+              type: object
+  /edapi/bankbills/project/query:
+    get:
+      description: 项目管理-项目列表
+      parameters:
+      - description: 项目创建时间排序搜索项 0:默认倒序 1:正序
+        enum:
+        - 0
+        - 1
+        in: query
+        name: date_desc
+        type: integer
+      - description: 结束时间 秒级时间戳
+        in: query
+        name: end_time
+        type: integer
+      - description: 关键字搜索 包含项目名称和备注的模糊匹配
+        in: query
+        name: keyword
+        type: string
+      - description: 存在异常项 默认5条/页
+        in: query
+        minimum: 5
+        name: limit
+        type: integer
+      - description: 存在异常项 第一页开始
+        in: query
+        minimum: 1
+        name: page
+        type: integer
+      - description: 开始时间 秒级时间戳
+        in: query
+        name: start_time
+        type: integer
+      - description: 用户token
+        in: query
+        name: token
+        required: true
+        type: string
+      - description: 项目类型搜索项 1:企业 2:个人 3:其他
+        enum:
+        - 1
+        - 2
+        - 3
+        in: query
+        name: type
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.Result1'
+            - properties:
+                data:
+                  $ref: '#/definitions/rest.ProjectListResp'
+              type: object
+  /edapi/bankbills/project/update:
+    get:
+      description: 项目管理-更新项目
+      parameters:
+      - description: 项目名称
+        in: query
+        name: name
+        type: string
+      - description: 项目备注
+        in: query
+        name: note
+        type: string
+      - description: 项目id
+        in: query
+        name: project_id
+        required: true
+        type: string
+      - description: 用户token
+        in: query
+        name: token
+        required: true
+        type: string
+      - description: 项目类型 1:企业 2:个人 3:其他
+        enum:
+        - 1
+        - 2
+        - 3
+        in: query
+        name: type
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/rest.Result1'
 swagger: "2.0"
